--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="/img/escape.png" type="image/x-icon">
-    <link rel="shortcut icon" href="/img/escape.png" type="image/x-icon">
+    <link rel="icon" href="https:/Galangxyz.github.io/website/galang.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https:/Galangxyz.github.io/website/galang.ico" type="image/x-icon">
     <meta name="theme-color" content="#ffffff">
     <!--Meta tag -->
-    <meta name="title" content="isi title" />
-  <meta name="description" content="isi deskripsi" />
+    <meta name="title" content="Galang- Contoh Meta Tag" />
+  <meta name="description" content="Meta Tag ini akan menjadi shorcurt link ketika di share " />
   <meta name="keywords" content="M Galang Febriansyah Pratama, galang, ,galngfp ,Web Developer, Game Developer, Apps Designr, Freelancer, Blogger, Gamer, 6Anime, anime, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animefrenzy, animekisa, watch anime, gogoanime, 9anime, kissanime, kiss anime, animeheaven, go go anime, watch cartoon online, thewatchcartoononline, 123anime, best anime to watch, dubbed anime, watch anime free online, anime to watch, watch anime online, anime sites, good anime to watch, animes to watch, anime stream, attack on titan netflix, chiaanime, kissanimefree, demon slayer netflix, naruto shippuden netflix, watch anime free, crunchyroll attack on titan, watch one piece, the watch cartoon online, watch attack on titan, naruto netflix, anime sites to watch, demon slayer movie crunchyroll, anime movies to watch, anime streaming sites, boruto crunchyroll, good animes to watch, kissanime apk, 9anime reddit, naruto shippuden dub, one piece crunchyroll, watch jujutsu kaisen, my hero academia netflix, gogo anime tv, your name full movie, animeseries, must watch anime, boku no pico watch, free anime sites, kissanime website, anime website to watch, streaming one piece, mob psycho 100 season 1, watch one piece online, attack on titan season 4 dub, gogoanime in, watch cartoon online tv, hunter x hunter netflix, shaman king netflix, free anime websites, romance anime to watch, one piece dub, best animes to watch, anime episode, attack on titan season 1 episode 1, crunchyroll naruto shippuden, best animes on netflix, jujutsu kaisen watch, demon slayer episode 1, black clover netflix, attack on titan watch online, pokemon episodes, watch anime online reddit, anime movies on netflix, animekisa apk, 9animeto, watch naruto shippuden, jujutsu kaisen gogoanime, watch attack on titan season 4, watch cartoons online free websites, best anime sites, 9anime zone, anime sub, chrono crusade, watch boruto, watch anime dub, attack on titan english dub, the promised neverland netflix, free anime series, naruto shippuden english dubbed, kiss hug anime, attack on titan dub, wcostreams, attack on titan season 4 online, jujutsu kaisen watch online, one piece episode 1, gogoanime one piece, one punch man season 2 episode 1, anime websites to watch free, one punch man season 2 netflix, ,galang ,kimetsu no yaiba netflix, watch one piece, is one piece on netflix, watch one piece online crunchyroll, watch jujutsu kaisen, download anime lovers, download anime slayer ,Pipe Fitter , Enginerring,web developer portfolio, personal website developer, portfolio web design, full-stack developer portfolio, UI/UX designer portfolio, front-end developer portfolio, back-end developer portfolio, responsive web design portfolio, modern web developer portfolio, graphic design portfolio, digital design portfolio, creative design portfolio, logo design portfolio, branding portfolio, graphic artist portfolio, visual design portfolio, photography portfolio, professional photographer portfolio, landscape photography portfolio, portrait photography portfolio, wedding photography portfolio, portfolio photographer online, creative photography portfolio, writer portfolio, content writer portfolio, freelance writer portfolio, copywriting portfolio, blogging portfolio, SEO writer portfolio, portfolio penulis artikel, UI/UX design portfolio, user interface portfolio, user experience design portfolio, mobile UI design portfolio, website UI design portfolio, responsive design portfolio, interactive design portfolio, mobile app development portfolio, iOS developer portfolio, Android developer portfolio, Flutter developer portfolio, React Native portfolio, mobile application portfolio, freelance portfolio, portfolio freelance designer, freelance developer portfolio, portfolio digital freelancer, online freelance portfolio, 3D design portfolio, animation portfolio, 3D artist portfolio, motion graphics portfolio, 3D modeling portfolio, video editing portfolio, professional video editor portfolio, motion graphics video portfolio, film editing portfolio, creative video editing portfolio, game developer portfolio, game designer portfolio, portfolio pengembang game, Unity developer portfolio, game development portfolio." />
   <meta name="charset" content="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
@@ -22,19 +22,19 @@
   <meta property="og:site_name" content="Galang">
   <!--ganti-->
   <meta property="og:url" content="https://Galangxyz.github.io/">
-  <meta itemprop="image" content="/img/escape.jpg">
-  <meta property="og:image" content="/img/escape.jpg">
-  <meta property="og:image:secure_url" content="/img/escape.jpg">
+  <meta itemprop="image" content="https:/Galangxyz.github.io/website/escape.jpg">
+  <meta property="og:image" content="https:/Galangxyz.github.io/website/escape.jpg">
+  <meta property="og:image:secure_url" content="https:/Galangxyz.github.io/website/escape.jpg">
   <meta property="og:image:width" content="650">
   <meta property="og:image:height" content="350">
-  <meta property="twitter:title" content="Galang - Web , Enginerring,  Designr, Freelancer, Blogger, Gamer , Pipe Fitter">
-  <meta property="twitter:description" content="Galang - Web ,  Enginerring, pps Designr, Freelancer, Blogger, Gamer , Pipe Fitter">
+  <meta property="twitter:title" content="Galang- Contoh Meta Tag ">
+  <meta property="twitter:description" content="Meta Tag ini akan menjadi shorcurt link ketika di share ">
   <meta property="twitter:url" content="https://Galangxyz.github.io/">
   <meta property="twitter:card" content="summary">
   <meta name="apple-mobile-web-app-status-bar" content="#202125">
   <link rel="canonical" href="https://Galangxyz.github.io/">
   <link rel="alternate" hreflang="en" href="https://Galangxyz.github.io/">
-  <link rel="icon" href="images/icon.png" type="/img/escape.jpg">
+  <link rel="icon" href="images/icon" type="https://Galangxyz.github.io/website/galang.ico">
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com/">
   <meta name="apple-mobile-web-app-status-bar" content="#202125">
     
