--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta name="revisit-after" content="1 days" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta http-equiv="Content-Language" content="en" />
-  <meta property="og:title" content="isi judul">
-  <meta property="og:description" content="isi deskripsi">
+  <meta property="og:title" content="Galang- Contoh Meta Tag">
+  <meta property="og:description" content="Meta Tag ini akan menjadi shorcurt link ketika di share ">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Galang">
